docs(opensensor-space): add setup and feature documentation
- Add detailed installation instructions for opensensor-space example
- Describe smart installer steps including UV package manager and DuckDB setup
- List key features such as batch intervals, Hive partitioning, Snappy compression, and edge processing
- Explain data storage layout with UUID-based station IDs and partitioning scheme
- Include configuration management using config.env file by the installer
- Update pyproject.toml with dependencies required for opensensor-space (duckdb, python-dotenv)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,11 @@ examples = [
     "paho-mqtt",
     "pillow"
 ]
+# Dependencies for opensensor-space data collection with DuckDB
+opensensor-space = [
+    "duckdb >= 1.4.2",
+    "python-dotenv >= 1.0.0"
+]
 
 [project.urls]
 GitHub = "https://www.github.com/pimoroni/enviroplus-python"
