feat(opensensor-space): enable writing batch data using pandas DataFrame
- Added pandas import and dependency in pyproject.toml
- Convert batch_data list to a pandas DataFrame for DuckDB querying
- Updated DuckDB COPY command to read from pandas DataFrame instead of list
- Improved partitioned Parquet file writing by leveraging DataFrame interface

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,8 @@ examples = [
 opensensor-space = [
     "duckdb >= 1.4.2",
     "python-dotenv >= 1.2.1",
-    "uuid-utils >= 0.11.1"
+    "uuid-utils >= 0.11.1",
+    "pandas >= 2.3.3"
 ]
 
 [project.urls]
