fix(ci): update workflows to use official astral-sh/setup-uv@v7 action
- Replace curl-based UV installation with official setup-uv action
- Enable caching for faster CI runs
- Fix failing Build, Tests, and QA workflows
- Follow latest UV GitHub Actions best practices (2025)

Refs:
- https://github.com/astral-sh/setup-uv
- https://docs.astral.sh/uv/guides/integration/github/

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,9 +26,15 @@ jobs:
         with:
           python-version: ${{ matrix.python }}
 
+      - name: Install UV
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+
       - name: Install Dependencies
         run: |
-          make dev-deps
+          uv tool install hatch
+          uv sync --group dev
 
       - name: Build Packages
         run: |
