--- a/.github/workflows/qa.yml
+++ b/.github/workflows/qa.yml
@@ -17,14 +17,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set up Python '3,11'
+      - name: Set up Python '3.11'
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
+      - name: Install UV
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+
       - name: Install Dependencies
         run: |
-          make dev-deps
+          uv sync --group dev
 
       - name: Run Quality Assurance
         run: |
