--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,16 +16,21 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
 
+      - name: Install UV
+        uses: astral-sh/setup-uv@v7
+        with:
+          enable-cache: true
+
       - name: Install Dependencies
         run: |
-          make dev-deps
+          uv sync --group dev
 
       - name: Run Tests
         run: |
