refactor(qa): modernize tooling with ruff and remove tox
- Replace tox with direct pytest and ruff usage
- Remove isort (ruff handles import sorting)
- Add pytest and pytest-cov to dev dependencies
- Simplify Makefile targets (qa, pytest, format)
- Auto-fix code style issues with ruff
- Update workflows to use modern tools

Benefits:
- Faster CI/CD (no tox overhead)
- Simpler configuration
- Ruff replaces Black, isort, flake8, and more
- Follows 2025 best practices

Refs:
- https://docs.astral.sh/ruff/
- https://docs.astral.sh/ruff/formatter/

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,14 +160,14 @@ ignore = [
 [dependency-groups]
 # PEP 735 dependency groups (UV, pip 23.1+)
 dev = [
-    "check-manifest",
+    "pytest",
+    "pytest-cov",
     "ruff",
     "codespell",
-    "isort",
+    "check-manifest",
     "twine",
     "hatch",
     "hatch-fancy-pypi-readme",
-    "tox",
     "pdoc"
 ]
 
